Completely styled the splash page for our site.

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -16,6 +16,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
+          <img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg">
+
           <a id="navLogo" class="navbar-brand" href="#">Schedule Advisor</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,8 +40,8 @@
               </li>
               -->
             </ul>
-            <ul class = "navbar-nav ms-auto">
-                <button class ="btn" style="background-color: #35b0a2; color: whitesmoke;">Log In / Out</button>
+            <ul class = "navbar-nav ms-5">
+                <button class ="btn" style="background-color: #1e6db3; color: whitesmoke;">Log In / Out</button>
             </ul>
           </div>
         </div>
@@ -74,5 +76,5 @@
   #https://www.youtube.com/watch?v=rjxpL89BEX4
   {% endblock %}
 
-  <hr>
+ 
   <p class = "footer"></p>
