--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -58,3 +58,18 @@
     height: 5vh;
     padding-right: 7.5px ;
 }
+
+#innerSplashPageBoxLogInScreen{
+    background-color: whitesmoke;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    border-radius: 25px;
+    
+}
+
+.signInAndUpTextOnLoginAndSignUpPages{
+    text-decoration: underline;
+    text-decoration-color: orange;
+}
