--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -12,13 +12,21 @@
 }
 
 .banner{
+    /*
     background-image: url("https://news.virginia.edu/sites/default/files/article_image/nau_gift_ss_header.jpg");
     width: 100%;
     height: 100vh;
-    /*
     background-color: #1e6db3;
     background-image: linear-gradient(160deg, #43bff8 0%, #e89932 100%);
     */
+
+    width: 100%;
+    height: 100vh;
+    
+
+    display:table;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('https://news.virginia.edu/sites/default/files/article_image/nau_gift_ss_header.jpg');
+    background-position:center top;
 }
 
 
@@ -38,13 +46,17 @@
 }
 
 #innerSplashPageBox{
+    background-color: rgba(0, 0, 0, 0.3);
+    /*
     background-color: rgb(51, 52, 79, 0.65);
+    */
     padding-left: 250px;
     padding-right: 250px;
     padding-top: 100px;
     padding-bottom: 100px;
-    border: 2px solid black;
+    border: 2px solid rgb(255, 255, 255);
     margin: auto;
+    border-radius: 25px;
     
     
 
@@ -70,6 +82,29 @@
 }
 
 .signInAndUpTextOnLoginAndSignUpPages{
-    text-decoration: underline;
-    text-decoration-color: orange;
+    font-weight: 750;
+    letter-spacing: 2.5px;
+    border-bottom: 2px solid #1e6db3;
+}
+
+
+#SignedInScreenInnerContainer{
+    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 50px;
+    background-color: whitesmoke;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    padding-top: 25px;
+    padding-left: 25px;
+    padding-bottom: 25px;
+    padding-right: 25px;
+}
+
+#welcomeMessageHeader{
+    font-weight: 750;
+    letter-spacing: 2.5px;
+    border-bottom: 2px solid #1e6db3;
 }
