--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -18,14 +18,14 @@
         <div class="container-fluid">
           <img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg">
 
-          <a id="navLogo" class="navbar-brand" href="#">Schedule Advisor</a>
+          <a id="navLogo" class="navbar-brand" href="/accounts/profile">Schedule Advisor</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="/accounts/profile">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Browse Courses</a>
@@ -41,7 +41,15 @@
               -->
             </ul>
             <ul class = "navbar-nav ms-5">
-                <button class ="btn" style="background-color: #1e6db3; color: whitesmoke;">Log In / Out</button>
+              {% if user.is_authenticated %}
+                <form action="/accounts/logout">
+                  <button class ="btn" style="background-color: #1e6db3; color: whitesmoke;">Log Out</button>
+                </form>
+              {% else %}
+                <form action="/accounts/login">
+                  <button class ="btn" style="background-color: #1e6db3; color: whitesmoke;">Log In</button>
+                </form>
+                  {% endif %}
             </ul>
           </div>
         </div>
