--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -14,7 +14,7 @@
 
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id = "wholeNavBar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg">
 
