--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="#">Profile</a>
               </li>
               <li class="nav-item dropdown">
-                  <!--
+                  
               <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li>
@@ -178,5 +178,5 @@
     </table> -->
 
  
-  <p class = "footer"></p> -->
+  <p class = "footer"></p>
   </html>
