--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<!-- <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/style.css' %}">
 
 {# Load the tag library #}
 {% load bootstrap5 %}
@@ -35,11 +35,11 @@
                 <a class="nav-link" href="#">Profile</a>
               </li>
               <li class="nav-item dropdown">
-                  
-              <li class="nav-item">
+              <!-- 
+                <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-              -->
+              </li> 
+            -->
             </ul>
             <ul class = "navbar-nav ms-5">
               {% if user.is_authenticated %}
@@ -57,8 +57,8 @@
       </nav>
 </header>
 
-<!--
-<div class = "containerCenter">
+
+<!-- <div class = "containerCenter">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Schedule Advisor</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,8 +78,8 @@
           </li>
       </ul>
     </div>
-  </nav>
-  -->
+  </nav> -->
+  
 
   <!-- {% block content %}
   #https://www.youtube.com/watch?v=rjxpL89BEX4
@@ -89,9 +89,9 @@
         {% csrf_token %}
     <select name="classes" id="classes">
         <option value="AAS">African-American and African Studies</option>
-        <!-- <option value="ACCT">Accounting</option>
+        <option value="ACCT">Accounting</option>
         <option value="AIRS">Air Science</option>
-        <option value="ALAR">Architecture and Landscape Architecture</option>
+        <!--<option value="ALAR">Architecture and Landscape Architecture</option>
         <option value="AMST">American Studies</option>
         <option value="ANTH">Anthropology</option>
         <option value="APMA">Applied Mathematics</option>
@@ -131,8 +131,8 @@
         </select>
     </form>
     <button type="submit">Submit</button>
-    {% for item in class_data %}
-        <p>{{ item.descr }}</p>
+    {% for class in classes %}
+        <p>{{ class.descr }}</p>
     {% endfor %}
 </body>
         <!-- <option value=""></option>
