--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -31,6 +31,9 @@
                 <a class="nav-link" href="/accounts/profile/browse_courses">Browse Courses</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/accounts/profile/shopping_cart">Shopping Cart</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
               </li>
               <li class="nav-item dropdown">
