--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -14,6 +14,7 @@
       <th>Time Offered</th>
       <th>Professor</th>
       <th>Availability</th>
+      <th>Modify Cart</th>
     </tr>
     <hr>
 {% for course in courses_in_cart %}
