Small stylistic change to shopping cart page and css class structure.

--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -128,7 +128,6 @@
     background-attachment: fixed;
 }
 
-#btn123{
-    margin-bottom: 10px;
-
+.buttonShoppingCartandBrowseCourses{
+    margin-top: 10px;
 }
