--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -60,49 +60,92 @@
   <br>
     <form action="{% url 'api_data' %}" method="get">
         {% csrf_token %}
-    <select name="classes" id="classes">
-        <option value=""> Department </option>
-        <option value="AAS">African-American and African Studies</option>
-        <option value="ACCT">Accounting</option>
-        <option value="AIRS">Air Science</option>
-        <option value="ALAR">Architecture and Landscape Architecture</option>
-        <option value="AMST">American Studies</option>
-        <option value="ANTH">Anthropology</option>
-        <option value="APMA">Applied Mathematics</option>
-        <option value="ARAB">Arabic</option>
-        <option value="ARAD">Arts Administration</option>
-        <option value="ARAH">History of Art and Architecture</option>
-        <option value="ARCH">Architecture</option>
-        <option value="ARCY">Archaeology</option>
-        <option value="ARH">Architectural History</option>
-        <option value="ARTH">History of Art</option>
-        <option value="ARTR">Arabic in Translation</option>
-        <option value="ARTS">Studio Art</option>
-        <option value="ASL">American Sign Language</option>
-        <option value="ASTR">Astronomy</option>
-        <option value="BIMS">Biomedical Sciences</option>
-        <option value="BIOC">Biochemistry</option>
-        <option value="BIOL">Biology</option>
-        <option value="BIOP">Biophysics</option>
-        <option value="BME">Biomedical Engineering</option>
-        <option value="BUS">Business</option>
-        <option value="CASS">College Art Scholars Seminar</option>
-        <option value="CE">Civil Engineering</option>
-        <option value="CELL">Cell Biology</option>
-        <option value="CHE">Chemical Engineering</option>
-        <option value="CHEM">Chemistry</option>
-        <option value="CHIN">Chinese</option>
-        <option value="CHTR">Chinese in Translation</option>
-        <option value="CLAS">Classics</option>
-        <option value="COGS">Cognitive Science</option>
-        <option value="COMM">Commerce</option>
-        <option value="CONC">Commerce Non-Credit</option>
-        <option value="CPE">Computer Engineering</option>
-        <option value="CREO">Creole</option>
-        <option value="CS">Computer Science</option>
-        <option value="DANC">Dance</option>
-        <option value="DEM">Democracy Initiative</option>
-        </select>
+        <select name="classes" id="classes">
+          <option value=""> Department </option>
+          <option value="AAS">African-American and African Studies</option>
+          <option value="AIRS">Air Science</option>
+          <option value="ASL">American Sign Language</option>
+          <option value="AMST">American Studies</option>
+          <option value="ANTH">Anthropology</option>
+          <option value="APMA">Applied Mathematics</option>
+          <option value="ALAR">Arch &amp; Landscape Arch</option>
+          <option value="ARH">Architectural History</option>
+          <option value="ARCHDP">Architecture Department</option>
+          <option value="ART">Art</option>
+          <option value="ASTR">Astronomy</option>
+          <option value="BIOC">Biochem &amp; Molecular Genetics</option>
+          <option value="BIOL">Biology</option>
+          <option value="BME">Biomedical Engineering</option>
+          <option value="BIMS">Biomedical Sciences</option>
+          <option value="BIOP">Biophysics</option>
+          <option value="CELL">Cell Biology</option>
+          <option value="CHE">Chemical Engineering</option>
+          <option value="CHEM">Chemistry</option>
+          <option value="CLAS">Classics</option>
+          <option value="COGS">Cognitive Science</option>
+          <option value="CGAS">College &amp; Graduate Arts &amp; Sci</option>
+          <option value="CS">Computer Science</option>
+          <option value="EDIS">Curriculum Inst &amp; Special Ed</option>
+          <option value="ENGRD">Dean Engineering &amp; Applied Sci</option>
+          <option value="ARCHD">Dean of Architecture</option>
+          <option value="CGASD">Dean of Arts &amp; Sciences</option>
+          <option value="COMMD">Dean of Commerce</option>
+          <option value="SCPSD">Dean of Continuing &amp; Prof Stds.</option>
+          <option value="DATAD">Dean of Data Science</option>
+          <option value="EDUCD">Dean of Education</option>
+          <option value="GBUSD">Dean of Graduate Business</option>
+          <option value="LAWD">Dean of Law</option>
+          <option value="MEDD">Dean of Medicine</option>
+          <option value="NURSD">Dean of Nursing</option>
+          <option value="DRAM">Drama</option>
+          <option value="EALC">East Asian Lang, Lit, &amp; Culture</option>
+          <option value="ECON">Economics</option>
+          <option value="ECE">Electrical &amp; Computer Engr</option>
+          <option value="STS">Engineering &amp; Society</option>
+          <option value="ENGL">English</option>
+          <option value="ESL">English as a Second Language</option>
+          <option value="EVSC">Environmental Sciences</option>
+          <option value="ETP">Environmental Thought and Practice</option>
+          <option value="PROVD">Executive VP &amp; Provost</option>
+          <option value="FREN">French</option>
+          <option value="GERM">German</option>
+          <option value="HIST">History</option>
+          <option value="EDHS">Human Services</option>
+          <option value="IMP">Interdisciplinary Major</option>
+          <option value="IDST">Interdisciplinary Studies</option>
+          <option value="JWST">Jewish Studies</option>
+          <option value="EDKI">Kinesiology</option>
+          <option value="LAR">Landscape Architecture</option>
+          <option value="EDLF">Leadership, Foundations, &amp; Pol</option>
+          <option value="MSE">Materials Science &amp; Engr</option>
+          <option value="MATH">Mathematics</option>
+          <option value="MCDG">McIntire Darden Grad Business</option>
+          <option value="MAE">Mechanical &amp; Aerospace Engr</option>
+          <option value="MDST">Media Studies</option>
+          <option value="MICR">Microbiol, Immun, &amp; Cancer Biol</option>
+          <option value="MESA">Middle Eastern &amp; South Asian</option>
+          <option value="MISC">Military Science</option>
+          <option value="MUSI">Music</option>
+          <option value="NASC">Naval Science</option>
+          <option value="NESC">Neuroscience</option>
+          <option value="PATH">Pathology</option>
+          <option value="PHAR">Pharmacology</option>
+          <option value="PHIL">Philosophy</option>
+          <option value="PHYS">Physics</option>
+          <option value="PHY">Physiology</option>
+          <option value="PST">Political &amp; Social Thought</option>
+          <option value="POLT">Politics</option>
+          <option value="PSYC">Psychology</option>
+          <option value="PHS">Public Health Services</option>
+          <option value="PPOL">Public Policy</option>
+          <option value="RELG">Religious Studies</option>
+          <option value="SLLT">Slavic</option>
+          <option value="SOC">Sociology</option>
+          <option value="SPAN">Spanich, Italian &amp; Portuguese</option>
+          <option value="STAT">Statistics</option>
+          <option value="PLAN">Urban &amp; Environmental Planning</option>
+          <option value="SWAG">Women, Gender &amp; Sexuality</option>
+          </select>
         <select id ="mnemonic">
           <option value=""> Subject </option>
           </select>
