--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -27,6 +27,9 @@
     display:table;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('https://news.virginia.edu/sites/default/files/article_image/nau_gift_ss_header.jpg');
     background-position:center top;
+
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 
@@ -101,6 +104,7 @@
     padding-left: 25px;
     padding-bottom: 25px;
     padding-right: 25px;
+    border: 1px solid gray;
 }
 
 #welcomeMessageHeader{
@@ -113,3 +117,17 @@
     border-bottom: 5px solid #1e6db3;
 }
 
+.bannerWhiteGradient{
+    width: 100%;
+    height: 100vh;
+
+    display:table;
+    background: linear-gradient( rgba(247, 247, 247, 0.700), rgba(247, 247, 247, 0.700) ), url('https://news.virginia.edu/sites/default/files/article_image/nau_gift_ss_header.jpg');
+    background-position:center top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.buttonShoppingCartandBrowseCourses{
+    margin-top: 10px;
+}
