--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="/accounts/profile/shopping_cart">Shopping Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="/accounts/profile/calendar">Calendar</a>
               </li>
               <li class="nav-item dropdown">
                   <!--
