added class start and stop times to cal

--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -48,7 +48,7 @@
             <p class="date-day">MON</p>
           </div>
           <div class="events">
-            <div class="event start-2 end-5 class1">
+            <div class="event start-2_00 end-5_00 class1">
               <p class="title">Class 1</p>
               <p class="time">2 PM - 5 PM</p>
             </div>
@@ -59,11 +59,11 @@
             <p class="date-day">TUE</p>
           </div>
           <div class="events">
-            <div class="event start-10 end-12 class2">
+            <div class="event start-10_00 end-12_00 class2">
               <p class="title">Class 2</p>
               <p class="time">10 AM - 12 PM</p>
             </div>
-            <div class="event start-1 end-4 class3">
+            <div class="event start-1_00 end-4_00 class3">
               <p class="title">Class 3</p>
               <p class="time">1PM - 4PM</p>
             </div>
@@ -74,11 +74,11 @@
             <p class="date-day">WED</p>
           </div>
           <div class="events">
-            <div class="event start-12 end-1 class4">
+            <div class="event start-11_00 end-12_00 class4">
               <p class="title">Class 4</p>
               <p class="time">11 AM - 12 PM</p>
             </div>
-            <div class="event start-2 end-5 class1">
+            <div class="event start-2_00 end-5_00 class1">
               <p class="title">Class 1</p>
               <p class="time">2 PM - 5 PM</p>
             </div>
@@ -89,11 +89,11 @@
             <p class="date-day">THU</p>
           </div>
           <div class="events">
-            <div class="event start-10 end-12 class2">
+            <div class="event start-10_00 end-12_00 class2">
               <p class="title">Class 2</p>
               <p class="time">10 AM - 12 PM</p>
             </div>
-            <div class="event start-1 end-4 class3">
+            <div class="event start-1_00 end-4_00 class3">
               <p class="title">Class 3</p>
               <p class="time">1PM - 4PM</p>
             </div>
