--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -156,24 +156,46 @@
   </form>
   <br>
   <table style="width:100%">
-    <tr>
-      <th>Course Number</th>
-      <th>Description</th>
-      <th>Type and Amount of Credits</th>
-      <th>Professor</th>
+    <tr class = "title-row">
+      <div class = "row"> 
+        <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+          <th>Course Number</th>
+        </div>
+        <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+          <th>Description</th>
+        </div>
+        <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+          <th>Type and Amount of Credits</th>
+        </div>
+        <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+          <th>Professor</th>
+        </div>
+        <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+          <th>Add Class</th>
+        </div>
+      </div>
     </tr>
     {% for class_object, class in content %}
-    <tr>
-      
-      <td>{{class.subject}} {{class.catalog_nbr}}</td>
-      <td>{{class.descr}}</td>
-      <td>{{class.section_type}} ({{class.units}})</td>
-      <td>{{class.instructors.0.name}}</td>
+    <tr class = "main-rows">
+        <div class = "row"> 
+            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+              <td >{{class.subject}} {{class.catalog_nbr}}</td>
+            </div>
+            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+              <td>{{class.descr}}</td>
+            </div>
+            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+              <td>{{class.section_type}} ({{class.units}})</td>
+            </div>
+            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
+              <td>{{class.instructors.0.name}}</td>
+            </div>
+        </div>
       <td>
         <form method="POST" action="{% url 'addToCart' class_object.pk%}">
           {% csrf_token %}
           <input type="hidden" name="pk" value="{{ class_object.pk }}">
-          <button type="submit" class = "btn btn-primary buttonShoppingCartandBrowseCourses">Add to Cart
+          <button type="submit" class = "btn btn-primary btn-sm buttonShoppingCartandBrowseCourses">Add to Cart
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
               <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
             </svg>
