minor bug fixes

--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -35,6 +35,12 @@
           <h6> Want to Check Shopping Cart? Click Below</h6>
           <br>
           <a href="shopping_cart"><button class = "btn btn-primary btn-lg"> Go to Shopping Cart </button></a>
+          <br>
+          <br>
+          <br>
+          <h6> Want to Check Your Calendar? Click Below</h6>
+          <br>
+          <a href="calendar"><button class = "btn btn-primary btn-lg"> Go to Calendar </button></a>
         </div>
       </div>
     </div>
