--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -23,7 +23,7 @@
       {% endif %}
       <br>
       <div class = "container">
-      <h3> What do you want to do today {{user.get_username}}?</h3>
+      <h3> What do you want to do today {{user.first_name}}?</h3>
         <br>
         <div class = "container"> 
           <h6> Want to Browse Classes? Click Below</h6>
