--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -30,6 +30,9 @@
             <div class = "col col-lg-2 col-md-2 col-sm-2"> 
               <th>Modify Cart</th>
             </div>
+            <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+              <th>Modify Schedule</th>
+            </div>
           </div>
         </tr>
         <hr>
@@ -52,6 +55,30 @@
                 </form>
               
               </td>
+              <td>
+                {% if course in courses_in_calendar%}
+                <form method="POST" action="{% url 'removeFromSchedule' course.pk%}">
+                  {% csrf_token %}
+                  <input type="hidden" name="pk" value="{{ course.pk }}">
+                  <button type="submit" class = "btn btn-danger buttonShoppingCartandBrowseCourses"><strong>Drop Course</strong>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                      </svg>
+                  </button>
+                </form>
+              </td>
+              {% else %}
+              <form method="POST" action="{% url 'addToSchedule' course.pk%}">
+                {% csrf_token %}
+                <input type="hidden" name="pk" value="{{ course.pk }}">
+                <button type="submit" class = "btn btn-success buttonShoppingCartandBrowseCourses"><strong>Add Course</strong>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                    <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+                  </svg>
+                </button>
+              </form>
+            </td>
+            {% endif %}
         </tr>
     {% endfor %}
     </table>
